# LiteNotepad

./: .gitignore  CLAUDE.md  DESIGN_CHALLENGES.md  IMPLEMENTATION-PLAN-statusline.md  PROPOSAL-statusline-update.md  README.md  Version.md  agents.md  eslint.config.js  index.html  install-help.md  package-lock.json  package.json  requirements.txt  set-proxy.bat  tasks.md  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
.opencode/plans/: LiteEdit-Implementation-Plan.md
docs/: test-status-report.md
docs/plans/: 2026-04-15-statusline-update-indicator.md  2026-04-16-statusbar-fix-integration.md  LiteEdit-Development-Plan.md  LiteEdit-Implementation-Plan.md
src/: App.tsx  editor.js  index.css  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src/components/: Editor.tsx  FormattingToolbar.tsx  MenuBar.tsx  StatusBar.tsx
src/hooks/: useAutoSave.ts  useDebouncedCursor.ts  useFileWatch.ts
src/test/: auto-save-indicator.test.tsx  auto-save.test.tsx  cursor-position-utils.test.ts  cursor-position.test.tsx  editor-utils.test.ts  encoding-indicator.test.tsx  file-encoding.test.ts  file-size.test.ts  file-watch-indicator.test.tsx  file-watch.test.tsx  integration.test.tsx  large-file-indicator.test.tsx  line-ending-indicator.test.tsx  line-ending.test.ts  useDebouncedCursor.test.tsx
src/utils/: cursor-position.ts  editor-utils.ts  file-encoding.ts  file-size.ts  line-ending.ts
