[package]
name = "liteedit"
version = "0.1.0"
description = "A lightweight text editor"
authors = ["You"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["shell-open", "dialog-all", "fs-all", "cli", "updater"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
notify = "6.1"
chrono = "0.4"
memmap2 = "0.9"
rayon = "1.8"
regex = "1.10"

[features]
# This feature is used for production builds
default = ["tauri/custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "liteedit"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true